--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "start": "node index.js",
-    "heroku-postbuild": "cd client && npm install && npm run build"
+    "start": "react-scripts start"
   },
   "eslintConfig": {
     "extends": "react-app"
