--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
+    "cors-anywhere": "^0.4.1",
     "font-awesome": "^4.7.0",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.8",
