--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "engines": {
+    "node": "10.15.1",
+    "npm": "6.4.1"
+  },
   "eslintConfig": {
     "extends": "react-app"
   },
