updated script start

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "resolve-url-loader": "^3.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
